Ajout de la functionnalité Cloturer Annonce
